<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" >

            <ImageView
                android:id="@+id/hero"
                android:layout_width="26dp"
                android:layout_height="30dp"
                android:contentDescription="@null"
                android:src="@drawable/hero" />

            <ImageView
                android:id="@+id/rocket"
                android:layout_width="10dp"
                android:layout_height="5dp"
                android:contentDescription="@null"
                android:src="@drawable/rocket" />

            <ImageView
                android:id="@+id/explode"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:src="@drawable/explode" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:lines="1"
                android:textColor="#FFF"
                android:textSize="24sp" />

            <ToggleButton
                android:id="@+id/btn_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_margin="7dp"
                android:background="@drawable/btn_play"
                android:onClick="onClick"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/mess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#80000000"
                android:gravity="center"
                android:lines="1"
                android:text="@string/game_over"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_sign"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/btn_sign_in" />

                <Button
                    android:id="@+id/btn_leaderboard"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="onClick"
                    android:text="@string/btn_leaderboard" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:contentDescription="@null"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_sound"
                        style="@style/Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.74"
                        android:onClick="onClick"
                        android:text="@string/btn_mute"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_start"
                        style="@style/Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.93"
                        android:background="@drawable/btn_start"
                        android:onClick="onClick"
                        android:text="@string/btn_start"
                        android:textColor="#FFF"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/btn_exit"
                        style="@style/Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:onClick="onClick"
                        android:text="@string/btn_exit"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="bottom|center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/score"
                android:textColor="#FFF"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_high_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="top|center"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/high_score"
                android:textColor="#ffe57e"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_home"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_home" />

            <Button
                android:id="@+id/btn_start2"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_start"
                android:onClick="onClick"
                android:text="@string/btn_start2"
                android:textColor="#FFF" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>